<resources>
    <string name="app_name">CSC306 Coursework</string>
    <string name="categories_title">Categories</string>
    <string name="choose_category">Choose Category</string>
    <string name="follow_categories">Select categories to follow</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="likes">Likes</string>
    <string name="days_ago">d ago</string>
    <string name="hours_ago">h ago</string>
    <string name="minutes_ago">m ago</string>
    <string name="seconds_ago">s ago</string>
    <string name="now">Now</string>
    <string name="failed_login">Login failed. Please check email and password then try again.</string>
    <string name="failed_sign_up">Sign up failed. Please check email and password then try again.</string>
    <string name="empty_auth">Email and password cannot be empty.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="following">Following</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="refresh">Refresh</string>
    <string name="refreshing">Refreshing…</string>
    <string name="settings">Settings</string>
    <string name="you_liked">You liked</string>
    <string name="you_disliked">You disliked</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="change_profile_pic">Change Profile Picture</string>
    <string name="choose_profile_pic">Choose Profile Picture</string>
    <string name="display_name">Display Name</string>
    <string name="location">Location</string>
    <string name="saving_profile">Saving profile...</string>
    <string name="error_saving_profile">Error saving profile:</string>
    <string name="user_likes_toolbar_title">\'s Likes</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for articles, sources or users</string>
    <string name="switch_to_latest">Switch to Latest Articles</string>
    <string name="switch_to_recommended">Switch to Recommended Articles</string>
    <string name="profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="liked_by">Liked by</string>
    <string name="you">you</string>
    <string name="and">and</string>
    <string name="others">others</string>
    <string name="new_articles_notification_title">New Articles</string>
    <string name="new_articles_notification_text">There are new articles waiting for you to read</string>
</resources>